--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,12 +18,6 @@ steps:
     targetFolder: '$(build.artifactStagingDirectory)'
   displayName: Copy .apk files to artifact staging directory
 
-- task: PublishBuildArtifacts@1
-  inputs:
-    pathToPublish: '$(build.artifactStagingDirectory)'
-    artifactName: ''
-    artifactType: 'container'
-  displayName: Publish artifacts
 - task: GitHubRelease@1
   inputs:
     gitHubConnection: 'github'
@@ -33,3 +27,9 @@ steps:
     tagSource: 'gitTag'
     changeLogCompareToRelease: 'lastFullRelease'
     changeLogType: 'commitBased'
+- task: PublishBuildArtifacts@1
+  inputs:
+    pathToPublish: '$(build.artifactStagingDirectory)'
+    artifactName: 'app-mock'
+    artifactType: 'container'
+  displayName: Publish artifacts
