Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,7 +24,7 @@ steps:
     repositoryName: 'agrim4s/pipelines-android'
     action: 'create'
     target: '$(Build.SourceVersion)'
-    tagSource: 'gitTag'
+    tagSource: ''
     changeLogCompareToRelease: 'lastFullRelease'
     changeLogType: 'commitBased'
 - task: PublishBuildArtifacts@1
