--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,30 +10,27 @@ variables:
 steps:
 
 
-- task: InstallAppleCertificate@2
-  inputs:
-    certSecureFile: 'appCertificate.p12'
-    certPwd: $(appCertificatePassword)
-    keychain: 'temp'
-    deleteCert: true
+# - task: InstallAppleCertificate@2
+#   inputs:
+#     certSecureFile: 'appCertificate.p12'
+#     certPwd: $(appCertificatePassword)
+#     keychain: 'temp'
+    # deleteCert: true
   
-- task: InstallAppleProvisioningProfile@1
-  inputs:
-    provProfileSecureFile: 'app.mobileprovision'
-    removeProfile: true
+# - task: InstallAppleProvisioningProfile@1
+#   inputs:
+#     provProfileSecureFile: 'app.mobileprovision'
+#     removeProfile: true
 
+steps:
 - task: Xcode@5
   inputs:
-    actions: 'build'
-    scheme: '$(scheme)'
     sdk: '$(sdk)'
+    scheme: '$(scheme)'
     configuration: '$(configuration)'
-    xcWorkspacePath: '**/*.xcodeproj/project.xcworkspace'
-    xcodeVersion: 'default'
-    signingOption: 'manual'
-    signingIdentity: '$(APPLE_CERTIFICATE_SIGNING_IDENTITY)'
-    provisioningProfileUuid: '$(APPLE_PROV_PROFILE_UUID)'
-    packageApp: true
+    xcodeVersion: 'default' # Options: default, 10, 9, 8, specifyPath
+    exportPath: '$(agent.buildDirectory)/output/$(sdk)/$(configuration)'
+    packageApp: false
     
 
 - task: Gradle@2
