--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,8 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 android.enableBuildCache=false
+ android {
+    aaptOptions {  
+                cruncherEnabled = false  
+            } 
+        }
