--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,12 +42,12 @@ android {
     }
 
     // Remove mockRelease as it's not needed.
-    android.variantFilter { variant ->
-        if(variant.buildType.name.equals('release')
-                && variant.getFlavors().get(0).name.equals('mock')) {
-            variant.setIgnore(true);
-        }
-    }
+   // android.variantFilter { variant ->
+    //    if(variant.buildType.name.equals('release')
+    //            && variant.getFlavors().get(0).name.equals('mock')) {
+    //        variant.setIgnore(true);
+     //   }
+   // }
 
     // Always show the result of every unit test, even if it passes.
     testOptions.unitTests.all {
