--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,10 @@ android {
             events 'passed', 'skipped', 'failed', 'standardOut', 'standardError'
         }
     }
+    aaptOptions {  
+                cruncherEnabled = false  
+            } 
+        
 }
 
 /*
